# cuda-learning

./: .gitignore  .~lock.cuda.pptx#  LICENSE  README.md  cuda.pptx
00hellocuda/: CMakeLists.txt  hello-gpu  hello-gpu.cu  tempCodeRunnerFile
03malloc/: malloc  malloc.cu
04stride_loop/: stride  stride.cu
05error/: error  error.cu
06matrix/: CMakeLists.txt  matrix  matrix.cu
08get_device_propersities/: device_launch_all_parameters.cu  device_launch_parameters.cu  get_device_propersities  get_device_propersities.cu
09memory_allocation/: memory_alloc  memory_alloc.cu
10cpu_gpu/: matrix  matrix.cu
12stream/: 01num.cu  02stream_legacy.cu  num  num.cu  report1.qdstrm  report2.qdrep  stream_legacy  stream_legacy.cu  xx
14shared_memory/: 01transpose  01transpose.cu  02transpose_plus  02transpose_plus.cu  04dot_product.cu
16numba/: transpose.ipynb  transpose.py
17atomicAdd原子操作/: histo_kernel.cu
cuda_lib/cublas/: test_gemm  test_gemm.cpp
cuda_lib/cublas/cublasSgemm/: column_first.cpp  row_first  row_first.cpp  simple_row_first.cpp
cuda_lib/cublas/cublasSgemmBatched/: demo.cpp
practice/001time/: 01time_calculate.cu  02consume_time_cuda_event.cu
practice/00python_cuda/: README.md
practice/00python_cuda/add2.egg-info/: PKG-INFO  SOURCES.txt
practice/00python_cuda/build_setup产生/temp.linux-x86_64-3.8/: .ninja_deps  .ninja_log  build.ninja
practice/00python_cuda/kernel/: add2_kernel.cu
practice/00python_cuda/pytorch/: CMakeLists.txt  add2_ops.cpp  setup.py  time.py  train.py
practice/01vecAdd/: 01vecAddBase.cu  02vecAddPro  02vecAddPro.cu  pv.ncu-rep
practice/02vecMul/: 01vecMulPro.cu
practice/03softmax/: 01softmax_base.cu
practice/04reduce/: 01reduce_v0_baseline.cu
practice/05pooling/: max_pooling_2d.cu
python_using_cpp_cuda/: README.md  setup.py
python_using_cpp_cuda/cpp_CUDA_code/: __init__.py  ball_query.cpp  ball_query_gpu.cu  ball_query_gpu.h  pointnet_api.cpp
python_using_cpp_cuda/python_code/: ball_query_example.py
template/: template.cu
test_nsight/: report1.qdrep  test_nsight.nsight-cuproj
